# CXX_GUI

./: .gitignore  .ninja_log  CMakeLists.txt  build.ninja  makefile
src/: guiapp.cxx  main.cpp  main.cxx
